--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-rework-flex",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "React grid system using rework-flex-grid",
-  "main": "dist/jsx/index.js",
+  "main": "dist/index.js",
   "dependencies": {
     "react": "~0.12.2"
   },
